<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/button"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="224dp"
        android:alpha="0.85"
        android:background="@drawable/button_main"
        android:text="@string/register_movie"
        android:textAllCaps="true"
        android:textStyle="bold"
        app:backgroundTint="#B8722C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button2"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:background="@drawable/button_main"
        android:text="@string/display_movies"
        app:backgroundTint="#B8722C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <Button
        android:id="@+id/button3"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:background="@drawable/button_main"
        android:text="@string/favourites"
        app:backgroundTint="#B8722C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button4"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:background="@drawable/button_main"
        android:text="@string/edit_movies"
        app:backgroundTint="#B8722C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button3" />

    <Button
        android:id="@+id/button5"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:background="@drawable/button_main"
        android:text="@string/search"
        app:backgroundTint="#B8722C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <Button
        android:id="@+id/button6"
        android:layout_width="243dp"
        android:layout_height="50dp"
        android:layout_marginTop="28dp"
        android:alpha="0.85"
        android:background="@drawable/button_main"
        android:text="@string/ratings"
        app:backgroundTint="#B8722C"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="top" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/group"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="20dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="720dp" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="367dp"
        android:layout_height="85dp"
        android:layout_marginTop="52dp"
        android:fontFamily="serif"
        android:gravity="center"
        android:text="@string/movie_port"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="65sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.147" />

    <com.tomer.fadingtextview.FadingTextView
        android:id="@+id/textView31"
        android:layout_width="420dp"
        android:layout_height="wrap_content"
        android:background="#FFFFFF"
        android:gravity="center"
        android:textColor="#9A0E0E"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button6"
        app:timeout="1500" />

</androidx.constraintlayout.widget.ConstraintLayout>