<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    tools:context=".RegisterActivity">

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="30dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:text="@string/register_your_movie"
                android:textColor="#FFAB00"
                android:textSize="36sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="57dp"
                android:background="@drawable/register"
                android:gravity="center"
                android:paddingRight="20dp"
                android:text="@string/enter_the_title_of_the_movie"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/register"
                android:gravity="center"
                android:text="@string/enter_the_year_of_the_movie"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName3"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="number"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/register"
                android:gravity="center"
                android:text="@string/enter_the_director_of_the_movie"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName4"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/register"
                android:gravity="center"
                android:text="@string/enter_actors_actresses_of_the_movie"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName5"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/register"
                android:gravity="center"
                android:text="@string/ratings_of_the_movie"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName6"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="numberDecimal"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/register"
                android:gravity="center"
                android:text="@string/review_of_the_movie"
                android:textAllCaps="true"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/editTextTextPersonName7"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:autofillHints=""
                android:background="#FFFFFF"
                android:ems="10"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="#000000"
                android:textStyle="bold"
                tools:ignore="LabelFor" />

            <Button
                android:id="@+id/button7"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="30dp"
                android:alpha="0.85"
                android:text="@string/save"
                android:textStyle="bold"
                app:backgroundTint="#701515" />

        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>