<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".SearchActivity">

    <EditText
        android:id="@+id/editTextTextPersonName2"
        android:layout_width="387dp"
        android:layout_height="52dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="48dp"
        android:alpha="0.90"
        android:background="@drawable/search"
        android:ems="10"
        android:fontFamily="serif"
        android:gravity="center"
        android:hint="@string/search"
        android:inputType="textPersonName"
        android:textColor="#FFFFFF"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:autofillHints="" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="55dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="210dp"
                android:gravity="center|left"
                android:paddingLeft="17dp"
                android:text="@string/search_result"
                android:textColor="#FFFFFF"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="20dp"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView21"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

            <TextView
                android:id="@+id/textView23"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="30dp"
                android:gravity="center|left"
                android:paddingLeft="75dp"
                android:text="@string/result"
                android:textColor="#FFFFFF"
                android:textSize="18sp"
                android:textStyle="bold"
                tools:ignore="RtlHardcoded,RtlSymmetry" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>